--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-date-picker": "^7.10.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.3.0"
